--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -7,75 +7,151 @@
   <style>
     :root {
       color-scheme: light dark;
-      --bg: #0f172a;
-      --card-bg: #1e293b;
+      --bg: #020617;
+      --card-bg: rgba(15, 23, 42, 0.92);
+      --border: rgba(148, 163, 184, 0.18);
       --accent: #38bdf8;
-      --text: #f8fafc;
-      --muted: #94a3b8;
+      --accent-soft: rgba(56, 189, 248, 0.25);
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --muted-soft: #6b7280;
     }
 
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(145deg, var(--bg), #020617);
+      background:
+        radial-gradient(circle at top left, #0f172a, transparent 55%),
+        radial-gradient(circle at bottom right, #020617, transparent 55%),
+        linear-gradient(135deg, var(--bg), var(--bg));
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
       color: var(--text);
-      font-family: 'Inter', system-ui, sans-serif;
-      line-height: 1.6;
+      padding: 2rem;
     }
 
     .card {
+      position: relative;
       background: var(--card-bg);
-      padding: 3rem 4rem;
-      border-radius: 1rem;
+      padding: 4rem 4rem 3.5rem;
+      border-radius: 1.75rem;
       text-align: center;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
-      max-width: 480px;
+      max-width: 640px;     /* widened */
+      width: 100%;
+      border: 1px solid var(--border);
+      backdrop-filter: blur(18px);
+      box-shadow:
+        0 28px 70px rgba(15, 23, 42, 0.75),
+        0 0 0 1px rgba(15, 23, 42, 0.8);
     }
 
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.75rem;
-      color: var(--accent);
-      letter-spacing: 0.5px;
+    .card::before {
+      content: "";
+      position: absolute;
+      inset: -1px;
+      border-radius: inherit;
+      background: radial-gradient(circle at top, var(--accent-soft), transparent 65%);
+      opacity: 0.65;
+      z-index: -1;
     }
 
-    p {
-      font-size: 1rem;
-      color: var(--muted);
-      margin: 0.5rem 0;
+    .spinner-wrapper {
+      display: inline-flex;
+      width: 96px;           /* slightly larger */
+      height: 96px;
+      border-radius: 999px;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 1.5rem;
+      background: radial-gradient(circle at 30% 30%, rgba(148, 163, 184, 0.25), transparent 65%);
+      box-shadow:
+        0 0 0 1px rgba(56, 189, 248, 0.25),
+        0 12px 36px rgba(15, 23, 42, 0.8);
     }
 
     .spinner {
-      width: 48px;
-      height: 48px;
-      margin: 2rem auto 1rem;
-      border: 4px solid rgba(255, 255, 255, 0.15);
-      border-top: 4px solid var(--accent);
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
+      width: 56px;
+      height: 56px;
+      border-radius: 999px;
+      border: 4px solid rgba(148, 163, 184, 0.28);
+      border-top-color: var(--accent);
+      border-right-color: var(--accent);
+      animation: spin 0.9s linear infinite;
     }
 
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
 
-    small {
-      display: block;
-      margin-top: 1rem;
-      font-size: 0.8rem;
+    h1 {
+      font-size: 2.2rem;
+      font-weight: 700;
+      letter-spacing: 0.04em;
+      margin: 1rem 0 1.5rem;
+      color: var(--accent);
+    }
+
+    .lead {
+      font-size: 1.15rem;
+      margin: 0.5rem 0 1.25rem;
       color: var(--muted);
+    }
+
+    .sub {
+      font-size: 1rem;
+      margin: 0.35rem 0;
+      color: var(--muted-soft);
+    }
+
+    .note {
+      margin-top: 2rem;
+      font-size: 0.95rem;
+      color: var(--muted-soft);
+    }
+
+    small {
+      margin-top: 1rem;
+      display: block;
+      font-size: 0.85rem;
+      color: var(--muted-soft);
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="spinner"></div>
+    <div class="spinner-wrapper">
+      <div class="spinner"></div>
+    </div>
     <h1>We’ll Be Right Back</h1>
-    <p>Our servers are getting a quick tune-up.</p>
-    <p><small>{{ reason }}</small></p>
+
+    <p class="reason">{{ reason }}</p>
+
+    <div class="note">
+      Thank you for your patience. This page will refresh automatically.
+    </div>
+    <small>2024 AEDG Explorer</small>
   </div>
+
+  <!-- Adaptive auto-refresh -->
+  <script>
+    const attempts = Number(sessionStorage.getItem("maintenanceAttempts")) || 0;
+
+    let interval;
+    if (attempts < 6) {
+      interval = 5;   
+    } else if (attempts < 20) {
+      interval = 15;  
+    } else {
+      interval = 30;  
+    }
+
+    sessionStorage.setItem("maintenanceAttempts", attempts + 1);
+
+    setTimeout(() => {
+      window.location.reload();
+    }, interval * 1000);
+  </script>
 </body>
 </html>
